# odido-aap

./: .env.example  .envrc  .gitattributes  .gitignore  .ruff.toml  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  get_bearer_apple_silicon.sh  get_creds_from_cache_db.sh  go.mod  go.sum  logger.go  main.go  odido.py  requirements.txt
cmd/: root.go
legacy/: odido.py
logger/: console_writer.go  file_writer.go  logger.go
logger/internal/: console_writer.go  level_writer.go
src/: log.rs  main.rs
src/api/: client.rs  mod.rs  usecase.rs
src/commands/: aanvullen.rs  daemon.rs  mod.rs  status.rs
