[package]
name = "odido-aap"
version = "0.2.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.37", features = ["derive", "env" ] }
reqwest = { version = "0.12", features = ["json", "cookies", "gzip", "brotli", "deflate", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.37", features = ["full"] }
owo-colors = "4.0"
tracing = "0.1"
