[package]
name = "odido-aap"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
chrono = { version = "0.4.41", default-features = false, features = ["clock"] }
clap = { version = "4.5.41", features = ["derive", "env"] }
http-body = "1.0.1"
owo-colors = "4.2.2"
reqwest = { version = "0.12.22", default-features = false, features = [
  "json",
  "gzip",
  "brotli",
  "rustls-tls",
  "http2",
] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.46.1", features = [
  "rt-multi-thread",
  "macros",
  "signal",
] }
tower-http = { version = "0.6.6", features = ["trace"] }
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.19", features = [
  "env-filter",
  "fmt",
  "ansi",
] }
